add the tracking application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.15)
 project(HCIProj)
 
 set(CMAKE_CXX_STANDARD 20)
-add_executable(HCIProj src/main.cpp src/CursorController.cpp src/CursorController.h src/Application.cpp src/Application.h)
+add_executable(HCIProj src/main.cpp src/CursorController.cpp src/CursorController.h src/Application.cpp src/Application.h src/TrackingApplication.cpp src/TrackingApplication.h)
 
 # change to your OpenCV path
 set(OpenCV_DIR "C:/environment/build/install")
